Refactor application structure: update .gitignore for Vite build output, Replace button elements with a custom Button component across various components, and move components like HomePage and MetadataTab to the Pages folder. Update styles with new icons and layout adjustments, including fixing up the player itself.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,10 @@ dist-ssr
 *.sln
 *.sw?
 
+# Build output
 out/
+# Vite build output
+.vite/
 
 # App data
 src/data/
@@ -31,3 +34,4 @@ src/data/
 !package.json
 !package-lock.json
 !tsconfig.json
+.vite/build/main.js
