--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".vite/build/main.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "bun run typecheck && DEV_MODE=true electron-forge start",
     "build": "bun run typecheck && vite build",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . && bun run typecheck",
@@ -20,9 +20,11 @@
     "fuse.js": "^7.1.0",
     "graphql": "^16.12.0",
     "graphql-request": "^7.3.5",
+    "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "video.js": "^8.23.4"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.10.2",
