--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "cli-progress": "^3.12.0",
     "electron-squirrel-startup": "^1.0.1",
     "fuse.js": "^7.1.0",
     "graphql": "^16.12.0",
@@ -37,6 +38,7 @@
     "@electron-forge/plugin-vite": "^7.10.2",
     "@electron/fuses": "^1.8.0",
     "@eslint/js": "^9.39.1",
+    "@types/cli-progress": "^3.11.6",
     "@types/node": "^24.10.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
